src/core/logs/wallet_clippy.log
    Checking wallet v0.1.0 (C:\Users\wmcor\projects\time-coin\wallet)
error[E0119]: conflicting implementations of trait `std::fmt::Display` for type `address::Address`
   --> wallet\src\address.rs:236:1
    |
149 | impl fmt::Display for Address {
    | ----------------------------- first implementation here
...
236 | impl std::fmt::Display for Address {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `address::Address`

error[E0599]: no function or associated item named `generate` found for struct `ed25519_dalek::SigningKey` in the current scope
   --> wallet\src\keypair.rs:60:39
    |
 60 |         let signing_key = SigningKey::generate(&mut OsRng);
    |                                       ^^^^^^^^ function or associated item not found in `ed25519_dalek::SigningKey`
    |
note: if you're trying to build a new `ed25519_dalek::SigningKey` consider using one of the following associated functions:
      ed25519_dalek::SigningKey::from_bytes
      ed25519_dalek::SigningKey::from_keypair_bytes
   --> C:\Users\wmcor\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ed25519-dalek-2.2.0\src\signing.rs:104:5
    |
104 |     pub fn from_bytes(secret_key: &SecretKey) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
138 |     pub fn from_keypair_bytes(bytes: &[u8; 64]) -> Result<SigningKey, SignatureError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0119, E0599.
For more information about an error, try `rustc --explain E0119`.
error: could not compile `wallet` (lib) due to 2 previous errors
